--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvzqs1k5hhGZkvniTTqUCd",
+      "authorship_tag": "ABX9TyNxZbH2nl313GZ6eMGlqs3r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this preparation notebook we will set up a suitable variant of Llama2 LLM to be able to do some raw queries. We then will try to integrate it into a langchain-based pipeline and test it by asking the model some simple questions (a \"vanilla\" chatbot, without any customization). This will help us to get ready for the next iteration in which we will take this pipeline one step further by implementing RAG (Retrieval Augmented Generation)."
+        "## Introduction\n",
+        "In this preparation notebook, we will set up a suitable variant of Llama2 LLM to be able to do some raw queries. We then will try to integrate it into a langchain-based pipeline and test it by asking the model some simple questions (a \"vanilla\" chatbot, missing yet any customization). This will help us to get ready for the next iteration in which we will take this pipeline one step further by implementing RAG (Retrieval Augmented Generation).\n",
+        "\n",
+        "We begin by building on top of \"Chatbot_LLama_2.ipynb\" notebook from our tutorials."
       ],
       "metadata": {
         "id": "vALDHW781po5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Workflow\n",
+        "1. **Installations**: We'll begin by setting up our environment with the required libraries.\n",
+        "2. **Prerequisites**: Ensure we have access to the Llama-2 7B model on Hugging Face.\n",
+        "3. **Loading the Model & Tokenizer**: Retrieve the model and tokenizer for our session.\n",
+        "4. **Creating the Llama Pipeline**: Prepare our model for generating responses.\n",
+        "5. **Interacting with Llama**: Prompt the model for answers and explore its capabilities.\n",
+        "\n",
+        "Let's dive in!\n"
+      ],
+      "metadata": {
+        "id": "kllfhNKM4xQi"
       }
     }
   ]
