--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxZbH2nl313GZ6eMGlqs3r",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOWrZcrz3zpX18wrf5mv3l0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -29,10 +31,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction\n",
-        "In this preparation notebook, we will set up a suitable variant of Llama2 LLM to be able to do some raw queries. We then will try to integrate it into a langchain-based pipeline and test it by asking the model some simple questions (a \"vanilla\" chatbot, missing yet any customization). This will help us to get ready for the next iteration in which we will take this pipeline one step further by implementing RAG (Retrieval Augmented Generation).\n",
+        "## Introduction (by the project team)\n",
+        "In this preparation notebook, we will set up a suitable variant of Llama2 LLM to be able to do some raw queries. We then will try to integrate it into a langchain-based pipeline and test it by asking the model some simple questions (a \"vanilla\" chatbot, missing yet any customization). This will help us to get ready for our project's next iteration (in another notebok) in which we will take this pipeline one step further by implementing RAG (Retrieval Augmented Generation).\n",
         "\n",
-        "We begin by building on top of \"Chatbot_LLama_2.ipynb\" notebook from our tutorials."
+        "*Note*: This notebook is partially based on `Chatbot_LLama_2.ipynb` from Maryiam's tutorials and also heavily borrows from `Run LLama-2 on Google Colab` tutorial by Muhammad Moin ([link](https://github.com/MuhammadMoinFaisal/LargeLanguageModelsProjects/blob/main/Run%20Llama2%20Google%20Colab/Llama_2_updated.ipynb]))."
       ],
       "metadata": {
         "id": "vALDHW781po5"
@@ -41,18 +43,77 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Workflow\n",
-        "1. **Installations**: We'll begin by setting up our environment with the required libraries.\n",
-        "2. **Prerequisites**: Ensure we have access to the Llama-2 7B model on Hugging Face.\n",
-        "3. **Loading the Model & Tokenizer**: Retrieve the model and tokenizer for our session.\n",
-        "4. **Creating the Llama Pipeline**: Prepare our model for generating responses.\n",
-        "5. **Interacting with Llama**: Prompt the model for answers and explore its capabilities.\n",
+        "# Workflow\n",
         "\n",
-        "Let's dive in!\n"
+        "1. Gathering the Dependencies\n",
+        "2."
       ],
       "metadata": {
-        "id": "kllfhNKM4xQi"
+        "id": "OUL4puK4Rdm6"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Gathering the Dependencies"
+      ],
+      "metadata": {
+        "id": "QHFznyYcTQJk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "`llama.cpp`'s objective is to run the LLaMA model with 4-bit integer quantization on MacBook. It is a plain C/C++ implementation optimized for Apple silicon and x86 architectures, supporting various integer quantization and BLAS libraries. Originally a web chat example, it now serves as a development playground for ggml library features.\n",
+        "\n",
+        "`GGML`, a C library for machine learning, facilitates the distribution of large language models (LLMs). It utilizes quantization to enable efficient LLM execution on consumer hardware. GGML files contain binary-encoded data, including version number, hyperparameters, vocabulary, and weights. The vocabulary comprises tokens for language generation, while the weights determine the LLM's size. Quantization reduces precision to optimize resource usage.\n"
+      ],
+      "metadata": {
+        "id": "hN5muyA7TZ9a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "## Quantized Models from the Hugging Face Community\n",
+        "\n",
+        "The Hugging Face community provides quantized models, which allow us to efficiently and effectively utilize the model on the T4 GPU. It is important to consult reliable sources before using any model.\n",
+        "\n",
+        "There are several variations available, but the ones that interest us are based on the GGLM library.\n",
+        "\n",
+        "We can see the different variations that Llama-2-13B-GGML has [here](https://huggingface.co/models?search=llama%202%20ggml).\n",
+        "\n",
+        "In this case, we will use the model called [Llama-2-13B-chat-GGML](https://huggingface.co/TheBloke/Llama-2-13B-chat-GGML).\n"
+      ],
+      "metadata": {
+        "id": "0_OfKCXeTkLu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Installing the Necessary Packages"
+      ],
+      "metadata": {
+        "id": "wbJFfE29Ugxd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# GPU llama-cpp-python\n",
+        "!CMAKE_ARGS=\"-DLLAMA_CUBLAS=on\" FORCE_CMAKE=1 pip install llama-cpp-python==0.1.78 numpy==1.23.4 --force-reinstall --upgrade --no-cache-dir --verbose\n",
+        "!pip install huggingface_hub\n",
+        "!pip install llama-cpp-python==0.1.78\n",
+        "!pip install numpy==1.23.4"
+      ],
+      "metadata": {
+        "id": "tLvr3mtwUe1M"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
