--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNmn6rxL8XKR2/pF5rV3hCK",
+      "authorship_tag": "ABX9TyM5KBquRLlPM9jbgB0eb2gU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -18,7 +18,7 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "8b92dde3fd25421182d59d0fc9f923cf": {
+        "a55d54a28fe84f97a908185f68884ea7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -33,14 +33,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_bfc33fc431a14b9e9746ca8ced039a55",
-              "IPY_MODEL_1b45e952fe504542bb7c5ec6b18efe8b",
-              "IPY_MODEL_68e722af90f14b1385eb4fe265656b97"
+              "IPY_MODEL_2d3d474cd20648fe8b98edc0d185c957",
+              "IPY_MODEL_ae3fe3eef9f1492b8420a2a827a9fe1f",
+              "IPY_MODEL_c5ef6eff1e2c46c6b6379db747eb8d9f"
             ],
-            "layout": "IPY_MODEL_cfd81f6984a24df487ee62edec32f1e9"
+            "layout": "IPY_MODEL_37ba7965719c4cb2b65837a4e6b46cd3"
           }
         },
-        "bfc33fc431a14b9e9746ca8ced039a55": {
+        "2d3d474cd20648fe8b98edc0d185c957": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -55,13 +55,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_550be594e9b84983b0d6ed5750d55655",
+            "layout": "IPY_MODEL_c3c55771e9b84fbf80b2643fec29fef6",
             "placeholder": "​",
-            "style": "IPY_MODEL_1d176438141047788bd2dbffd393792f",
-            "value": "llama-2-13b-chat.ggmlv3.q5_1.bin:  13%"
+            "style": "IPY_MODEL_326b5cdce75c465d99ffa30f21bf1821",
+            "value": "llama-2-13b-chat.ggmlv3.q5_1.bin:   6%"
           }
         },
-        "1b45e952fe504542bb7c5ec6b18efe8b": {
+        "ae3fe3eef9f1492b8420a2a827a9fe1f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -77,15 +77,15 @@
             "bar_style": "danger",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_75a8d4e11f044abdbe543deb660fe1f5",
+            "layout": "IPY_MODEL_f98b7102146b494bb0dce29a61b1baf9",
             "max": 9763701888,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_2be88f4a7cac47b5aa7fdc6fe1e78246",
-            "value": 1289748480
+            "style": "IPY_MODEL_a5e1317ba3914f758df7496887aeeef8",
+            "value": 545259520
           }
         },
-        "68e722af90f14b1385eb4fe265656b97": {
+        "c5ef6eff1e2c46c6b6379db747eb8d9f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -100,13 +100,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_49cc2bb253a64123a529ec5d62aa2061",
+            "layout": "IPY_MODEL_19655524f24549238ece07f54b0c33b9",
             "placeholder": "​",
-            "style": "IPY_MODEL_1f20d95562e940368659b47d6905ce1c",
-            "value": " 1.29G/9.76G [00:18&lt;04:39, 30.3MB/s]"
+            "style": "IPY_MODEL_f101c9cb8c674edebbb1fbdacd58402e",
+            "value": " 545M/9.76G [00:04&lt;00:42, 215MB/s]"
           }
         },
-        "cfd81f6984a24df487ee62edec32f1e9": {
+        "37ba7965719c4cb2b65837a4e6b46cd3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -158,7 +158,7 @@
             "width": null
           }
         },
-        "550be594e9b84983b0d6ed5750d55655": {
+        "c3c55771e9b84fbf80b2643fec29fef6": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -210,7 +210,7 @@
             "width": null
           }
         },
-        "1d176438141047788bd2dbffd393792f": {
+        "326b5cdce75c465d99ffa30f21bf1821": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -225,7 +225,7 @@
             "description_width": ""
           }
         },
-        "75a8d4e11f044abdbe543deb660fe1f5": {
+        "f98b7102146b494bb0dce29a61b1baf9": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -277,7 +277,7 @@
             "width": null
           }
         },
-        "2be88f4a7cac47b5aa7fdc6fe1e78246": {
+        "a5e1317ba3914f758df7496887aeeef8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -293,7 +293,7 @@
             "description_width": ""
           }
         },
-        "49cc2bb253a64123a529ec5d62aa2061": {
+        "19655524f24549238ece07f54b0c33b9": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -345,7 +345,7 @@
             "width": null
           }
         },
-        "1f20d95562e940368659b47d6905ce1c": {
+        "f101c9cb8c674edebbb1fbdacd58402e": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -865,43 +865,90 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive/')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u8ecW2kEX9dG",
+        "outputId": "aaa1add5-27ed-4c3f-f84c-30748a24fd24"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive/\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "models_root = '/content/drive/MyDrive/IAT481/481 Team Projs/NLP Project/Models/'"
+      ],
+      "metadata": {
+        "id": "Cfta_FXnYoFS"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd $models_root"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gxz50ieWYvls",
+        "outputId": "69dea75c-93b2-497e-ceec-cf5fff0dc5ba"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[Errno 2] No such file or directory: '/content/drive/MyDrive/IAT481/481 Team Projs/NLP Project/Models/'\n",
+            "/content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "model_path = hf_hub_download(repo_id=model_name_or_path, filename=model_basename)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 443,
+          "height": 319,
           "referenced_widgets": [
-            "8b92dde3fd25421182d59d0fc9f923cf",
-            "bfc33fc431a14b9e9746ca8ced039a55",
-            "1b45e952fe504542bb7c5ec6b18efe8b",
-            "68e722af90f14b1385eb4fe265656b97",
-            "cfd81f6984a24df487ee62edec32f1e9",
-            "550be594e9b84983b0d6ed5750d55655",
-            "1d176438141047788bd2dbffd393792f",
-            "75a8d4e11f044abdbe543deb660fe1f5",
-            "2be88f4a7cac47b5aa7fdc6fe1e78246",
-            "49cc2bb253a64123a529ec5d62aa2061",
-            "1f20d95562e940368659b47d6905ce1c"
+            "a55d54a28fe84f97a908185f68884ea7",
+            "2d3d474cd20648fe8b98edc0d185c957",
+            "ae3fe3eef9f1492b8420a2a827a9fe1f",
+            "c5ef6eff1e2c46c6b6379db747eb8d9f",
+            "37ba7965719c4cb2b65837a4e6b46cd3",
+            "c3c55771e9b84fbf80b2643fec29fef6",
+            "326b5cdce75c465d99ffa30f21bf1821",
+            "f98b7102146b494bb0dce29a61b1baf9",
+            "a5e1317ba3914f758df7496887aeeef8",
+            "19655524f24549238ece07f54b0c33b9",
+            "f101c9cb8c674edebbb1fbdacd58402e"
           ]
         },
         "id": "98pbxmdDXFPL",
-        "outputId": "85406aae-ca28-4236-b0a5-46a56b7b9515"
+        "outputId": "136acecf-19fd-4cc5-b836-5079c5336553"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/huggingface_hub/utils/_token.py:88: UserWarning: \n",
-            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
-            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
-            "You will be able to reuse this secret in all of your notebooks.\n",
-            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
-            "  warnings.warn(\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -911,7 +958,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "8b92dde3fd25421182d59d0fc9f923cf"
+              "model_id": "a55d54a28fe84f97a908185f68884ea7"
             }
           },
           "metadata": {}
@@ -923,7 +970,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-562a854be391>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhf_hub_download\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrepo_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_name_or_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_basename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-7-562a854be391>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhf_hub_download\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrepo_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_name_or_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_basename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/huggingface_hub/utils/_validators.py\u001b[0m in \u001b[0;36m_inner_fn\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    116\u001b[0m             \u001b[0mkwargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msmoothly_deprecate_use_auth_token\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhas_token\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhas_token\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 118\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0m_inner_fn\u001b[0m  \u001b[0;31m# type: ignore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/huggingface_hub/file_download.py\u001b[0m in \u001b[0;36mhf_hub_download\u001b[0;34m(repo_id, filename, subfolder, repo_type, revision, library_name, library_version, cache_dir, local_dir, local_dir_use_symlinks, user_agent, force_download, force_filename, proxies, etag_timeout, resume_download, token, local_files_only, legacy_cache_layout, endpoint)\u001b[0m\n\u001b[1;32m   1455\u001b[0m                     \u001b[0m_check_disk_space\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpected_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocal_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1456\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1457\u001b[0;31m             http_get(\n\u001b[0m\u001b[1;32m   1458\u001b[0m                 \u001b[0murl_to_download\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1459\u001b[0m                 \u001b[0mtemp_file\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/huggingface_hub/file_download.py\u001b[0m in \u001b[0;36mhttp_get\u001b[0;34m(url, temp_file, proxies, resume_size, headers, expected_size, _nb_retries)\u001b[0m\n\u001b[1;32m    525\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mchunk\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# filter out keep-alive new chunks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    526\u001b[0m                     \u001b[0mprogress\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 527\u001b[0;31m                     \u001b[0mtemp_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    528\u001b[0m                     \u001b[0mnew_resume_size\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    529\u001b[0m                     \u001b[0;31m# Some data has been downloaded from the server so we reset the number of retries.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
