--- a/LLama2_vanilla_bot.ipynb
+++ b/LLama2_vanilla_bot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM5KBquRLlPM9jbgB0eb2gU",
+      "authorship_tag": "ABX9TyNDlQeEeshmAb4XdKr3MpFo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -18,7 +18,7 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "a55d54a28fe84f97a908185f68884ea7": {
+        "c875120c6f164abfbf1ab7400b05c9aa": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -33,14 +33,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_2d3d474cd20648fe8b98edc0d185c957",
-              "IPY_MODEL_ae3fe3eef9f1492b8420a2a827a9fe1f",
-              "IPY_MODEL_c5ef6eff1e2c46c6b6379db747eb8d9f"
+              "IPY_MODEL_13881f0ee4994cbbb3144c478ee207f3",
+              "IPY_MODEL_076e04ced5264496bf6d0b7fe1ccd797",
+              "IPY_MODEL_4934f75c71ad4d3ebf59646601afc54e"
             ],
-            "layout": "IPY_MODEL_37ba7965719c4cb2b65837a4e6b46cd3"
+            "layout": "IPY_MODEL_9ae35f9157074a0ab109399a0cb6525f"
           }
         },
-        "2d3d474cd20648fe8b98edc0d185c957": {
+        "13881f0ee4994cbbb3144c478ee207f3": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -55,13 +55,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_c3c55771e9b84fbf80b2643fec29fef6",
+            "layout": "IPY_MODEL_50af9771482e48fc88d2b33df17f01b3",
             "placeholder": "​",
-            "style": "IPY_MODEL_326b5cdce75c465d99ffa30f21bf1821",
-            "value": "llama-2-13b-chat.ggmlv3.q5_1.bin:   6%"
+            "style": "IPY_MODEL_4f402a7644b74869a3f32afb142b566f",
+            "value": "llama-2-13b-chat.ggmlv3.q5_1.bin: 100%"
           }
         },
-        "ae3fe3eef9f1492b8420a2a827a9fe1f": {
+        "076e04ced5264496bf6d0b7fe1ccd797": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -74,18 +74,18 @@
             "_view_module": "@jupyter-widgets/controls",
             "_view_module_version": "1.5.0",
             "_view_name": "ProgressView",
-            "bar_style": "danger",
+            "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_f98b7102146b494bb0dce29a61b1baf9",
+            "layout": "IPY_MODEL_8cdd86e1d4cb4d0ea492fb9c9a127340",
             "max": 9763701888,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_a5e1317ba3914f758df7496887aeeef8",
-            "value": 545259520
+            "style": "IPY_MODEL_230a32ca152c44cfa4e68c22c08e24f4",
+            "value": 9763701888
           }
         },
-        "c5ef6eff1e2c46c6b6379db747eb8d9f": {
+        "4934f75c71ad4d3ebf59646601afc54e": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -100,13 +100,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_19655524f24549238ece07f54b0c33b9",
+            "layout": "IPY_MODEL_69618fbb64e342a4ab87f2dd1b9f7973",
             "placeholder": "​",
-            "style": "IPY_MODEL_f101c9cb8c674edebbb1fbdacd58402e",
-            "value": " 545M/9.76G [00:04&lt;00:42, 215MB/s]"
+            "style": "IPY_MODEL_5d9bfd7fe77046c59a9180ddd0adae6f",
+            "value": " 9.76G/9.76G [01:05&lt;00:00, 79.5MB/s]"
           }
         },
-        "37ba7965719c4cb2b65837a4e6b46cd3": {
+        "9ae35f9157074a0ab109399a0cb6525f": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -158,7 +158,7 @@
             "width": null
           }
         },
-        "c3c55771e9b84fbf80b2643fec29fef6": {
+        "50af9771482e48fc88d2b33df17f01b3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -210,7 +210,7 @@
             "width": null
           }
         },
-        "326b5cdce75c465d99ffa30f21bf1821": {
+        "4f402a7644b74869a3f32afb142b566f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -225,7 +225,7 @@
             "description_width": ""
           }
         },
-        "f98b7102146b494bb0dce29a61b1baf9": {
+        "8cdd86e1d4cb4d0ea492fb9c9a127340": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -277,7 +277,7 @@
             "width": null
           }
         },
-        "a5e1317ba3914f758df7496887aeeef8": {
+        "230a32ca152c44cfa4e68c22c08e24f4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -293,7 +293,7 @@
             "description_width": ""
           }
         },
-        "19655524f24549238ece07f54b0c33b9": {
+        "69618fbb64e342a4ab87f2dd1b9f7973": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -345,7 +345,7 @@
             "width": null
           }
         },
-        "f101c9cb8c674edebbb1fbdacd58402e": {
+        "5d9bfd7fe77046c59a9180ddd0adae6f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -907,16 +907,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gxz50ieWYvls",
-        "outputId": "69dea75c-93b2-497e-ceec-cf5fff0dc5ba"
+        "outputId": "0c7c365e-1dad-452c-d2c3-7953589e7416"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[Errno 2] No such file or directory: '/content/drive/MyDrive/IAT481/481 Team Projs/NLP Project/Models/'\n",
-            "/content\n"
+            "/content/drive/.shortcut-targets-by-id/13FaXzyfvSXh_PD6h92caiYAKqKbPsFTR/481 Team Projs/NLP Project/Models\n"
           ]
         }
       ]
@@ -929,25 +928,25 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 319,
+          "height": 49,
           "referenced_widgets": [
-            "a55d54a28fe84f97a908185f68884ea7",
-            "2d3d474cd20648fe8b98edc0d185c957",
-            "ae3fe3eef9f1492b8420a2a827a9fe1f",
-            "c5ef6eff1e2c46c6b6379db747eb8d9f",
-            "37ba7965719c4cb2b65837a4e6b46cd3",
-            "c3c55771e9b84fbf80b2643fec29fef6",
-            "326b5cdce75c465d99ffa30f21bf1821",
-            "f98b7102146b494bb0dce29a61b1baf9",
-            "a5e1317ba3914f758df7496887aeeef8",
-            "19655524f24549238ece07f54b0c33b9",
-            "f101c9cb8c674edebbb1fbdacd58402e"
+            "c875120c6f164abfbf1ab7400b05c9aa",
+            "13881f0ee4994cbbb3144c478ee207f3",
+            "076e04ced5264496bf6d0b7fe1ccd797",
+            "4934f75c71ad4d3ebf59646601afc54e",
+            "9ae35f9157074a0ab109399a0cb6525f",
+            "50af9771482e48fc88d2b33df17f01b3",
+            "4f402a7644b74869a3f32afb142b566f",
+            "8cdd86e1d4cb4d0ea492fb9c9a127340",
+            "230a32ca152c44cfa4e68c22c08e24f4",
+            "69618fbb64e342a4ab87f2dd1b9f7973",
+            "5d9bfd7fe77046c59a9180ddd0adae6f"
           ]
         },
         "id": "98pbxmdDXFPL",
-        "outputId": "136acecf-19fd-4cc5-b836-5079c5336553"
+        "outputId": "5ac9d9e8-bd88-4307-cb9f-a123366b5bda"
       },
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -958,24 +957,39 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "a55d54a28fe84f97a908185f68884ea7"
+              "model_id": "c875120c6f164abfbf1ab7400b05c9aa"
             }
           },
           "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# GPU\n",
+        "lcpp_llm = None\n",
+        "lcpp_llm = Llama(\n",
+        "    model_path=model_path,\n",
+        "    n_threads=2, # CPU cores\n",
+        "    n_batch=512, # Should be between 1 and n_ctx, consider the amount of VRAM in your GPU.\n",
+        "    n_gpu_layers=32 # Change this value based on your model and your GPU VRAM pool.\n",
+        "    )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "f_9Kl30daeLX",
+        "outputId": "445e8564-68f7-4764-aa16-e8e4d5d721d9"
+      },
+      "execution_count": 18,
+      "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-562a854be391>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhf_hub_download\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrepo_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_name_or_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_basename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/huggingface_hub/utils/_validators.py\u001b[0m in \u001b[0;36m_inner_fn\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    116\u001b[0m             \u001b[0mkwargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msmoothly_deprecate_use_auth_token\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhas_token\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhas_token\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 118\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0m_inner_fn\u001b[0m  \u001b[0;31m# type: ignore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/huggingface_hub/file_download.py\u001b[0m in \u001b[0;36mhf_hub_download\u001b[0;34m(repo_id, filename, subfolder, repo_type, revision, library_name, library_version, cache_dir, local_dir, local_dir_use_symlinks, user_agent, force_download, force_filename, proxies, etag_timeout, resume_download, token, local_files_only, legacy_cache_layout, endpoint)\u001b[0m\n\u001b[1;32m   1455\u001b[0m                     \u001b[0m_check_disk_space\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpected_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocal_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1456\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1457\u001b[0;31m             http_get(\n\u001b[0m\u001b[1;32m   1458\u001b[0m                 \u001b[0murl_to_download\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1459\u001b[0m                 \u001b[0mtemp_file\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/huggingface_hub/file_download.py\u001b[0m in \u001b[0;36mhttp_get\u001b[0;34m(url, temp_file, proxies, resume_size, headers, expected_size, _nb_retries)\u001b[0m\n\u001b[1;32m    525\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mchunk\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# filter out keep-alive new chunks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    526\u001b[0m                     \u001b[0mprogress\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 527\u001b[0;31m                     \u001b[0mtemp_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    528\u001b[0m                     \u001b[0mnew_resume_size\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    529\u001b[0m                     \u001b[0;31m# Some data has been downloaded from the server so we reset the number of retries.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.10/tempfile.py\u001b[0m in \u001b[0;36mfunc_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    620\u001b[0m             \u001b[0;34m@\u001b[0m\u001b[0m_functools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwraps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    621\u001b[0m             \u001b[0;32mdef\u001b[0m \u001b[0mfunc_wrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 622\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    623\u001b[0m             \u001b[0;31m# Avoid closing the file as long as the wrapper is alive,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    624\u001b[0m             \u001b[0;31m# see issue #18879.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "AVX = 1 | AVX2 = 1 | AVX512 = 0 | AVX512_VBMI = 0 | AVX512_VNNI = 0 | FMA = 1 | NEON = 0 | ARM_FMA = 0 | F16C = 1 | FP16_VA = 0 | WASM_SIMD = 0 | BLAS = 1 | SSE3 = 1 | VSX = 0 | \n"
           ]
         }
       ]
